--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,21 +2,21 @@ cmake_minimum_required(VERSION 2.8.4)
 project(libEidomatica)
 
 set(SOURCES 
-    lib/gco/maxflow.cpp
-    lib/gco/GCoptimization.cpp
-    lib/gco/LinkedBlockList.cpp
-    lib/maxflow/graph.cpp
-    lib/maxflow/maxflow.cpp
+  lib/gco/maxflow.cpp
+  lib/gco/GCoptimization.cpp
+  lib/gco/LinkedBlockList.cpp
+  lib/maxflow/graph.cpp
+  lib/maxflow/maxflow.cpp
 #	src/alg/connected_components.cpp
-    src/alg/density.cpp
-	src/alg/graphcut.cpp
+  src/alg/density.cpp
+  src/alg/graphcut.cpp
 	src/alg/multi_label_graphcut.cpp
-    lib/gco/graph.cpp
+	src/io/hdf5_reader.cpp
+	src/io/hdf5_wrapper.cpp
+  lib/gco/graph.cpp
 	src/utilities/parameters.cpp
 	src/utilities/utilities.cpp
-#	src/c_wrapper.cpp
-#	src/library_link.c
-    src/library_link.cpp
+  src/library_link.cpp
 )
 
 include_directories(
@@ -39,9 +39,10 @@ find_package(Boost REQUIRED COMPONENTS filesystem system)
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}" ${CMAKE_MODULE_PATH})
 find_package(Mathematica)
 find_package(PNG REQUIRED)
-if(${Boost_FOUND} AND ${Mathematica_WolframLibrary_FOUND})
-    include_directories(${Boost_INCLUDE_DIRS} ${Mathematica_WolframLibrary_INCLUDE_DIR} ${Mathematica_MathLink_INCLUDE_DIR})
-    target_link_libraries(Eidomatica ${Boost_LIBRARIES} ${Mathematica_MathLink_LIBRARIES} ${PNG_LIBRARY})
+find_package(HDF5 REQUIRED  COMPONENTS CXX C)
+if(${Boost_FOUND} AND ${Mathematica_WolframLibrary_FOUND} AND ${HDF5_FOUND})
+    include_directories(${Boost_INCLUDE_DIRS} ${Mathematica_WolframLibrary_INCLUDE_DIR} ${Mathematica_MathLink_INCLUDE_DIR} ${HDF5_INCLUDE_DIRS})
+    target_link_libraries(Eidomatica ${Boost_LIBRARIES} ${Mathematica_WolframLibrary_LIBRARIES} ${Mathematica_MathLink_LIBRARIES} ${PNG_LIBRARY} ${HDF5_CXX_LIBRARIES})
     set_target_properties(Eidomatica PROPERTIES COMPILE_DEFINITIONS "GLM_FORCE_RADIANS")
 endif()
 
