Fixing bug with wrong linkage.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ set(Boost_USE_MULTITHREADED ON)
 set(Boost_USE_STATIC_RUNTIME OFF) 
 find_package(Boost REQUIRED COMPONENTS filesystem system)
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}" ${CMAKE_MODULE_PATH})
+set(Mathematica_USE_LIBCXX_LIBRARIES OFF)
 find_package(Mathematica)
 find_package(PNG REQUIRED)
 find_package(HDF5 REQUIRED COMPONENTS CXX C)
