Adding alpha shapes to library.
libEidomatica now depends on CGAL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 2.8.4)
 project(libEidomatica)
 set(CMAKE_MACOSX_RPATH 1)
 
+#add_subdirectory(src/cgal)
+
 set(SOURCES 
   lib/gco/maxflow.cpp
   lib/gco/GCoptimization.cpp
@@ -9,6 +11,7 @@ set(SOURCES
   lib/maxflow/graph.cpp
   lib/maxflow/maxflow.cpp
 #	src/alg/connected_components.cpp
+  src/alg/alpha_shapes.cpp
   src/alg/density.cpp
   src/alg/graphcut.cpp
 	src/alg/multi_label_graphcut.cpp
@@ -36,17 +39,19 @@ add_dependencies(Eidomatica Version)
 set(Boost_USE_STATIC_LIBS OFF) 
 set(Boost_USE_MULTITHREADED ON)  
 set(Boost_USE_STATIC_RUNTIME OFF) 
-find_package(Boost REQUIRED COMPONENTS filesystem system)
+find_package(Boost REQUIRED COMPONENTS filesystem system thread)
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}" ${CMAKE_MODULE_PATH})
 set(Mathematica_USE_LIBCXX_LIBRARIES OFF)
 find_package(Mathematica)
 find_package(PNG REQUIRED)
 find_package(HDF5 REQUIRED COMPONENTS CXX C)
+set(CGAL_LIBRARIES /opt/local/lib/libCGAL.dylib /opt/local/lib/libCGAL_Core.dylib /opt/local/lib/libgmp.dylib)
+
 message("Include directories: ${Boost_INCLUDE_DIRS} ${Mathematica_WolframLibrary_INCLUDE_DIR} ${Mathematica_MathLink_INCLUDE_DIR} ${HDF5_INCLUDE_DIRS} ${PNG_INCLUDE_DIR}")
-message("Libraries: ${Boost_LIBRARIES} ${Mathematica_MathLink_LIBRARY} ${PNG_LIBRARY} ${HDF5_CXX_LIBRARIES}")
+message("Libraries: ${Boost_LIBRARIES} ${Mathematica_MathLink_LIBRARY} ${PNG_LIBRARY} ${HDF5_CXX_LIBRARIES} ${CGAL_LIBRARIES} ${CGAL_3RD_PARTY_LIBRARIES}")
 if(${Boost_FOUND} AND ${Mathematica_WolframLibrary_FOUND} AND ${HDF5_FOUND})
     include_directories(${Boost_INCLUDE_DIRS} ${Mathematica_WolframLibrary_INCLUDE_DIR} ${Mathematica_MathLink_INCLUDE_DIR} ${HDF5_INCLUDE_DIRS} ${PNG_INCLUDE_DIR})
-    target_link_libraries(Eidomatica ${Boost_LIBRARIES} ${Mathematica_MathLink_LIBRARIES} ${PNG_LIBRARY} ${HDF5_CXX_LIBRARIES})
+    target_link_libraries(Eidomatica ${Boost_LIBRARIES} ${Mathematica_MathLink_LIBRARIES} ${PNG_LIBRARY} ${HDF5_CXX_LIBRARIES} ${CGAL_LIBRARIES})
     set_target_properties(Eidomatica PROPERTIES COMPILE_DEFINITIONS "GLM_FORCE_RADIANS")
 endif()
 
